--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'   //se agrego para room database
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
     defaultConfig {
@@ -24,6 +25,7 @@ android {
             versionNameSuffix kotlin_version
         }
     }
+
     compileOptions {
         sourceCompatibility "1.8"
         targetCompatibility "1.8"
@@ -31,9 +33,18 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    viewBinding{    // se agrega este codigo para usar binding
+        enabled=true
+    }
 }
 
 dependencies {
+    def room_version = "2.2.5"  //se agregaron para room database
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
