--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,29 +12,35 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
+        <activity android:name=".ui.registro.RegistroActivity"></activity>
         <activity
             android:name=".ui.tabs.Tabbedctivity"
             android:label="@string/title_activity_tabbedctivity"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".ui.bottom.bottomActivity"
             android:label="@string/title_activity_bottom">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
         <activity
             android:name=".ui.drawer.DrawerActivity"
             android:label="@string/title_activity_drawer"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ui.main.MainActivity" />
-        <activity android:name=".ui.login.LoginActivity" />
-        <activity android:name=".ui.registro.RegistroActivity" />
+        <activity android:name=".ui.main.MainActivity">
+
+        </activity>
+
+
+
+        <activity android:name=".ui.login.LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+            tools:ignore="DuplicateActivity" />
     </application>
 
 </manifest>
