Se soluciona problema con la tabla de registro y se se crean algunos fragmentos.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,36 +11,28 @@
         android:roundIcon="@mipmap/ic_logo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup">
-        <activity android:name=".ui.registro.RegistroActivity"></activity>
-        <activity
-            android:name=".ui.tabs.Tabbedctivity"
-            android:label="@string/title_activity_tabbedctivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity
-            android:name=".ui.bottom.bottomActivity"
-            android:label="@string/title_activity_bottom">
+        tools:ignore="AllowBackup,ExtraText">
 
-        </activity>
-        <activity
-            android:name=".ui.drawer.DrawerActivity"
-            android:label="@string/title_activity_drawer"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ui.main.MainActivity">
-
-        </activity>
-
-
-
-        <activity android:name=".ui.login.LoginActivity">
+        <activity android:name=".ui.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-            tools:ignore="DuplicateActivity" />
+        <activity android:name=".ui.registro.RegistroActivity" />
+        <activity
+            android:name=".ui.tabs.Tabbedctivity"
+            android:label="@string/title_activity_tabbedctivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.bottom.BottomActivity"
+            android:label="@string/title_activity_bottom"></activity>
+        <activity
+            android:name=".ui.drawer.DrawerActivity"
+            android:label="@string/title_activity_drawer"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ui.main.MainActivity" />
+        <activity android:name=".ui.login.LoginActivity" />
     </application>
-
 </manifest>
