--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 09 19:42:43 COT 2020
-sdk.dir=C\:\\Users\\Jaidiver\\AppData\\Local\\Android\\Sdk
+#Tue Nov 10 01:09:33 COT 2020
+sdk.dir=C\:\\Users\\PC\\AppData\\Local\\Android\\Sdk
